--- a/printer.cfg
+++ b/printer.cfg
@@ -1,11 +1,12 @@
-# This file contains common pin mappings for the MKS SGEN_L V2 board. To
-# use this config, the firmware should be compiled for the LPC1769.
+# Paste here and save your klipper configuration
+# This file contains common pin mappings for the MKS SGEN_L board. To
+# use this config, the firmware should be compiled for the LPC1768.
 
 # See docs/Config_Reference.md for a description of parameters.
 
 [stepper_x]
 step_pin: P2.2
-dir_pin: !P2.3
+dir_pin: P2.3
 enable_pin: !P2.1
 microsteps: 16
 rotation_distance: 40
@@ -16,7 +17,7 @@ homing_speed: 50
 
 [stepper_y]
 step_pin: P0.19
-dir_pin: !P0.20
+dir_pin: P0.20
 enable_pin: !P2.8
 microsteps: 16
 rotation_distance: 40
@@ -27,38 +28,56 @@ homing_speed: 50
 
 [stepper_z]
 step_pin: P0.22
-dir_pin: P2.11
+dir_pin: !P2.11
 enable_pin: !P0.21
 microsteps: 16
 rotation_distance: 8
 endstop_pin: ^P1.25  # ^P1.24 for Z-max
 position_endstop: 0.5
-position_max: 140
+position_max: 145
+
+#[probe]
+# Inductive Probe
+#pin: ^P1.25
+#   Z_MAX on mcu_z
+#x_offset: 0.0
+#y_offset: 25.0
+#z_offset: 0.00
+#speed: 2.0
+#samples: 4
+#   Number of times to probe a point
+#sample_retract_dist: 6.0
+#   How far to retract (in mm) from the probe point for multi-probe samples
 
 [extruder]
 step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 16
-rotation_distance: 6
+rotation_distance: 33.500
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.23
 control: pid
-pid_Kp: 22.2
-pid_Ki: 1.08
-pid_Kd: 114
+pid_kp = 27.082
+pid_ki = 1.505
+pid_kd = 121.869
+
 min_temp: 0
-max_temp: 240
+max_temp: 260
 
 [extruder1]
 step_pin: P0.1
 dir_pin: P0.0
 enable_pin: !P0.10
 microsteps: 16
-rotation_distance: 6
+rotation_distance: 33.500
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+shared_heater: extruder
+#sensor_type: EPCOS 100K B57560G104F
 #heater_pin: P2.6
 #sensor_pin: P0.25
 #...
@@ -69,88 +88,51 @@ sensor_type: ATC Semitec 104GT-2
 sensor_pin: P0.24
 control: watermark
 min_temp: 0
-max_temp: 120
+max_temp: 130
 
 [fan]
 pin: P2.4
 
-#[fan2]
-#pin: P1.4
-
 [mcu]
-#serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
-#restart_method: command
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_1960FF13A59869AFAF8D3F5EC62000F5-if00
+
 
 [printer]
-kinematics: cartesian
+kinematics: corexy
 max_velocity: 200
 max_accel: 2000
 max_z_velocity: 25
 max_z_accel: 100
 
 
-[filament_switch_sensor my_sensor]
-#pause_on_runout: True
-#   When set to True, a PAUSE will execute immediately after a runout
-#   is detected. Note that if pause_on_runout is False and the
-#   runout_gcode is omitted then runout detection is disabled. Default
-#   is True.
-#runout_gcode:
-#   A list of G-Code commands to execute after a filament runout is
-#   detected. See docs/Command_Templates.md for G-Code format. If
-#   pause_on_runout is set to True this G-Code will run after the
-#   PAUSE is complete. The default is not to run any G-Code commands.
-#insert_gcode:
-#   A list of G-Code commands to execute after a filament insert is
-#   detected. See docs/Command_Templates.md for G-Code format. The
-#   default is not to run any G-Code commands, which disables insert
-#   detection.
-#event_delay: 3.0
-#   The minimum amount of time in seconds to delay between events.
-#   Events triggered during this time period will be silently
-#   ignored. The default is 3 seconds.
-#pause_delay: 0.5
-#   The amount of time to delay, in seconds, between the pause command
-#   dispatch and execution of the runout_gcode. It may be useful to
-#   increase this delay if OctoPrint exhibits strange pause behavior.
-#   Default is 0.5 seconds.
-#switch_pin:
-#   The pin on which the switch is connected. This parameter must be
-#   provided.
-
 ########################################
 # TMC2208 configuration
 ########################################
 
-#[tmc2208 stepper_x]
-#uart_pin: P1.1
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 999999
+[tmc2209 stepper_x]
+uart_pin: P1.1
+run_current: 0.800
+stealthchop_threshold: 999999
 
-#[tmc2208 stepper_y]
-#uart_pin: P1.8
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 999999
+[tmc2209 stepper_y]
+uart_pin: P1.8
+run_current: 0.800
+stealthchop_threshold: 999999
 
-#[tmc2208 stepper_z]
-#uart_pin: P1.10
-#run_current: 0.650
-#hold_current: 0.450
-#stealthchop_threshold: 999999
+[tmc2209 stepper_z]
+uart_pin: P1.10
+run_current: 0.650
+stealthchop_threshold: 999999
 
-#[tmc2208 extruder]
-#uart_pin: P1.15
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 999999
+[tmc2209 extruder]
+uart_pin: P1.15
+run_current: 0.800
+stealthchop_threshold: 999999
 
-#[tmc2208 extruder1]
-#uart_pin: P1.17
-#run_current: 0.800
-#hold_current: 0.500
-#stealthchop_threshold: 999999
+[tmc2209 extruder1]
+uart_pin: P1.17
+run_current: 0.800
+stealthchop_threshold: 999999
 
 
 ########################################
@@ -164,7 +146,6 @@ max_z_accel: 100
 #spi_software_sclk_pin: P0.4
 ##diag1_pin: ^!P1.29
 #run_current: 0.800
-#hold_current: 0.500
 #stealthchop_threshold: 999999
 
 #[tmc2130 stepper_y]
@@ -174,7 +155,6 @@ max_z_accel: 100
 #spi_software_sclk_pin: P0.4
 ##diag1_pin: ^!P1.27
 #run_current: 0.800
-#hold_current: 0.500
 #stealthchop_threshold: 999999
 
 #[tmc2130 stepper_z]
@@ -184,7 +164,6 @@ max_z_accel: 100
 #spi_software_sclk_pin: P0.4
 ##diag1_pin: ^!P1.25
 #run_current: 0.650
-#hold_current: 0.450
 #stealthchop_threshold: 999999
 
 #[tmc2130 extruder]
@@ -194,7 +173,6 @@ max_z_accel: 100
 #spi_software_sclk_pin: P0.4
 ##diag1_pin: ^!P1.28
 #run_current: 0.800
-#hold_current: 0.500
 #stealthchop_threshold: 999999
 
 #[tmc2130 extruder1]
@@ -204,22 +182,59 @@ max_z_accel: 100
 #spi_software_sclk_pin: P0.4
 ##diag1_pin: ^!P1.26
 #run_current: 0.800
-#hold_current: 0.500
 #stealthchop_threshold: 999999
 
-#MACROS
+[filament_switch_sensor my_sensor]。
+pause_on_runout: True
+#   当设置为 "True "时，会在检测到耗尽后立即暂停打印机。
+#   请注意, 如果 pause_on_runout 为 False 并且没有定义。
+#   runout_gcode的话, 耗尽检测将被禁用。
+#   默认为 True。
+#runout_gcode:
+#   在检测到耗材耗尽后会执行的G代码命令列表。
+#   有关G-Code 格式请见 docs/Command_Templates.md。
+#   如果 pause_on_runout 被设置为 True，这个G-Code将在
+#   暂停后执行。
+#   默认情况是不运行任何 G-Code 命令。
+#insert_gcode:
+#   在检测到耗材插入后会执行的 G-Code 命令列表。
+#   关于G代码格式，请参见 docs/Command_Templates.md。
+#   默认不运行任何 G-Code 命令，这将禁用耗材插入检测。
+#event_delay: 3.0
+#   事件之间的最小延迟时间（秒）。
+#   在这个时间段内触发的事件将被默许忽略。
+#   默认为3秒。
+#pause_delay: 0.5
+#   暂停命令和执行 runout_gcode 之间的延迟时间, 单位是秒。
+#   如果在OctoPrint的情况下，增加这个延迟可能改善暂
+#   停的可靠性。如果OctoPrint表现出奇怪的暂停行为，
+#   考虑增加这个延迟。
+#   默认为0.5秒。
+switch_pin: ^P1.24
+#   连接到检测开关的引脚。
+#   必须提供此参数。
 
-#[gcode_macro END_PRINT]
-#gcode:
-#    M140 S0
-#    M104 S0
-#    M106 S0
-#   G91
-#    G1 X0 Y0 E-3 F300
-#    G1 Z20 F3000
-#    G90
-#    M84
 
+[safe_z_home]
+home_xy_position: 50,50
+#   A X, Y coordinate (e.g. 100, 100) where the Z homing should be
+#   performed. This parameter must be provided.
+speed: 50.0
+#   Speed at which the toolhead is moved to the safe Z home
+#   coordinate. The default is 50 mm/s
+z_hop: 1
+#   Distance (in mm) to lift the Z axis prior to homing. This is
+#   applied to any homing command, even if it doesn't home the Z axis.
+#   If the Z axis is already homed and the current Z position is less
+#   than z_hop, then this will lift the head to a height of z_hop. If
+#   the Z axis is not already homed the head is lifted by z_hop.
+#   The default is to not implement Z hop.
+z_hop_speed: 15.0
+#   Speed (in mm/s) at which the Z axis is lifted prior to homing. The
+#   default is 15 mm/s.
+#move_to_previous: False
+#   When set to True, the X and Y axes are reset to their previous
+#   positions after Z axis homing. The default is False.
 
 ########################################
 # EXP1 / EXP2 (display) pins
@@ -235,4 +250,6 @@ aliases:
     EXP2_2=P0.7, EXP2_4=P0.28, EXP2_6=P0.9,  EXP2_8=<RST>, EXP2_10=<NC>
     # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp1"
 
-# See the MKS Lcd Config path file for definitions of common LCD displays.
+# See the sample-lcd.cfg file for definitions of common LCD displays.
+
+
