--- a/printer.cfg
+++ b/printer.cfg
@@ -32,38 +32,45 @@ dir_pin: !P2.11
 enable_pin: !P0.21
 microsteps: 16
 rotation_distance: 8
-endstop_pin: ^P1.25  # ^P1.24 for Z-max
-position_endstop: 0.5
+endstop_pin: probe: z_virtual_endstop
+#endstop_pin: ^P1.25  # ^P1.24 for Z-max
+#position_endstop: 0.5
 position_max: 145
+position_min = -5
 
-#[probe]
-# Inductive Probe
-#pin: ^P1.25
-#   Z_MAX on mcu_z
-#x_offset: 0.0
-#y_offset: 25.0
-#z_offset: 0.00
-#speed: 2.0
-#samples: 4
+
+[probe]
+pin: ^P1.25
+x_offset: 0.0
+y_offset: 25.0
+#z_offset: 0
+speed: 2.0
+samples: 4
 #   Number of times to probe a point
-#sample_retract_dist: 6.0
+sample_retract_dist: 6.0
 #   How far to retract (in mm) from the probe point for multi-probe samples
 
 [extruder]
 step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
-microsteps: 16
-rotation_distance: 33.500
+microsteps: 32
+rotation_distance: 6.1
+
+max_extrude_only_distance: 100
+max_extrude_only_velocity: 50
+max_extrude_only_accel: 3000
+instantaneous_corner_velocity: 1.500
+
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.23
 control: pid
-pid_kp = 27.082
-pid_ki = 1.505
-pid_kd = 121.869
+pid_kp = 28.913
+pid_ki = 1.494
+pid_kd = 139.869
 
 min_temp: 0
 max_temp: 260
@@ -84,9 +91,13 @@ shared_heater: extruder
 
 [heater_bed]
 heater_pin: P2.5
-sensor_type: ATC Semitec 104GT-2
+sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.24
-control: watermark
+control: pid
+# tuned for stock hardware with 50 degree Celsius target
+pid_Kp: 74.460
+pid_Ki: 1.628
+pid_Kd: 851.639
 min_temp: 0
 max_temp: 130
 
@@ -184,45 +195,76 @@ stealthchop_threshold: 999999
 #run_current: 0.800
 #stealthchop_threshold: 999999
 
-[filament_switch_sensor my_sensor]。
-pause_on_runout: True
-#   当设置为 "True "时，会在检测到耗尽后立即暂停打印机。
-#   请注意, 如果 pause_on_runout 为 False 并且没有定义。
-#   runout_gcode的话, 耗尽检测将被禁用。
-#   默认为 True。
-#runout_gcode:
-#   在检测到耗材耗尽后会执行的G代码命令列表。
-#   有关G-Code 格式请见 docs/Command_Templates.md。
-#   如果 pause_on_runout 被设置为 True，这个G-Code将在
-#   暂停后执行。
-#   默认情况是不运行任何 G-Code 命令。
-#insert_gcode:
-#   在检测到耗材插入后会执行的 G-Code 命令列表。
-#   关于G代码格式，请参见 docs/Command_Templates.md。
-#   默认不运行任何 G-Code 命令，这将禁用耗材插入检测。
-#event_delay: 3.0
-#   事件之间的最小延迟时间（秒）。
-#   在这个时间段内触发的事件将被默许忽略。
-#   默认为3秒。
-#pause_delay: 0.5
-#   暂停命令和执行 runout_gcode 之间的延迟时间, 单位是秒。
-#   如果在OctoPrint的情况下，增加这个延迟可能改善暂
-#   停的可靠性。如果OctoPrint表现出奇怪的暂停行为，
-#   考虑增加这个延迟。
-#   默认为0.5秒。
-switch_pin: ^P1.24
-#   连接到检测开关的引脚。
-#   必须提供此参数。
+[filament_switch_sensor E1_sensor]
 
+#QUERY_FILAMENT_SENSOR SENSOR= my_sensor
+
+#SET_FILAMENT_SENSOR SENSOR= my_sensor ENABLE=[1]
+
+#detection_length: 7.0
+#   The minimum length of filament pulled through the sensor to trigger
+#   a state change on the switch_pin
+#   Default is 7 mm.
+#extruder:extruder
+#   The name of the extruder section this sensor is associated with.
+#   This parameter must be provided.
+switch_pin: !P1.26
+
+pause_on_runout: True
+
+runout_gcode:
+    PARK_MACRO
+    M117 Out of Filament
+
+insert_gcode:
+    M117 Resuming
+    RESUME_MACRO
+    
+event_delay: 3.0
+
+pause_delay: 0.5
+
+[filament_switch_sensor E0_sensor]
+
+#QUERY_FILAMENT_SENSOR SENSOR= my_sensor
+
+#SET_FILAMENT_SENSOR SENSOR= my_sensor ENABLE=[1]
+
+#detection_length: 7.0
+#   The minimum length of filament pulled through the sensor to trigger
+#   a state change on the switch_pin
+#   Default is 7 mm.
+#extruder:extruder
+#   The name of the extruder section this sensor is associated with.
+#   This parameter must be provided.
+switch_pin: !P1.24
+
+pause_on_runout: True
+
+runout_gcode:
+    PARK_MACRO
+    M117 Out of Filament
+
+insert_gcode:
+    M117 Resuming
+    RESUME_MACRO
+    
+event_delay: 3.0
+
+pause_delay: 0.5
+
+[gcode_macro M600]
+description: Filament change
+gcode: PAUSE Y=10   ; everything needed is defined there
 
 [safe_z_home]
-home_xy_position: 50,50
+home_xy_position: 100,100
 #   A X, Y coordinate (e.g. 100, 100) where the Z homing should be
 #   performed. This parameter must be provided.
 speed: 50.0
 #   Speed at which the toolhead is moved to the safe Z home
 #   coordinate. The default is 50 mm/s
-z_hop: 1
+z_hop: 5
 #   Distance (in mm) to lift the Z axis prior to homing. This is
 #   applied to any homing command, even if it doesn't home the Z axis.
 #   If the Z axis is already homed and the current Z position is less
@@ -252,4 +294,143 @@ aliases:
 
 # See the sample-lcd.cfg file for definitions of common LCD displays.
 
+[display]
+lcd_type: hd44780
+hd44780_protocol_init: True
+line_length: 20
+#   Set the number of characters per line for an hd44780 type lcd.
+#   Possible values are 20 (default) and 16. The number of lines is
+#   fixed to 4.
+rs_pin: EXP1_4
+e_pin: EXP1_3
+d4_pin: EXP1_5
+d5_pin: EXP1_6
+d6_pin: EXP1_7
+d7_pin: EXP1_8
+encoder_pins: ^EXP2_3, ^EXP2_5
+click_pin: ^!EXP1_2
+#kill_pin: ^!EXP2_8
 
+[output_pin beeper]
+pin: EXP1_1
+
+#FOR Ender3
+#[display]
+#lcd_type: st7920
+#cs_pin: PA3
+#sclk_pin: PA1
+#sid_pin: PC1
+#encoder_pins: ^PD2, ^PD3
+#click_pin: ^!PC0
+
+[bed_mesh]
+speed: 100
+horizontal_move_z: 5
+mesh_min: 25, 25
+mesh_max: 180, 180
+probe_count: 3, 3
+#####################################################################
+# 	Macros
+#####################################################################
+
+
+[gcode_macro PAUSE]
+description: Pause the actual running print
+rename_existing: PAUSE_BASE
+gcode:
+    ##### set defaults #####
+    {% set x = params.X|default(60) %}         #edit to your park position
+    {% set y = params.Y|default(10) %}        #edit to your park position
+    {% set z = params.Z|default(5)|float %}    #edit to your park position
+    {% set e = params.E|default(0) %}        #edit to your retract length
+    ##### calculate save lift position #####
+    {% set max_z = printer.toolhead.axis_maximum.z|float %}
+    {% set act_z = printer.toolhead.position.z|float %}
+    {% set lift_z = z|abs %}
+    {% if act_z < (max_z - lift_z) %}
+        {% set z_safe = lift_z %}
+    {% else %}
+        {% set z_safe = max_z - act_z %}
+    {% endif %}
+    ##### end of definitions #####
+    SAVE_GCODE_STATE NAME=VPAUSE
+    PAUSE_BASE
+    G91
+    {% if printer.extruder.can_extrude|lower == 'true' %}
+      M83                            ; set extruder to relative
+      G1 E-{e} F2100
+    {% else %}
+      {action_respond_info("Extruder not hot enough to retract")}
+    {% endif %}
+    {% if "xyz" in printer.toolhead.homed_axes %}
+      G1 Z{z_safe}
+      G90
+      G1 X{x} Y{y} F6000
+    {% else %}
+      {action_respond_info("Printer not homed")}
+    {% endif %}
+
+[gcode_macro RESUME]
+description: Resume the actual running print
+rename_existing: RESUME_BASE
+gcode:
+    ##### set defaults #####
+    {% set e = params.E|default(0) %} #edit to your retract length
+    #### get VELOCITY parameter if specified ####
+    {% if 'VELOCITY' in params|upper %}
+      {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
+    {%else %}
+      {% set get_params = "" %}
+    {% endif %}
+    ##### end of definitions #####
+    RESTORE_GCODE_STATE NAME=VPAUSE MOVE=1 MOVE_SPEED=50
+    G91
+    {% if printer.extruder.can_extrude|lower == 'true' %}
+      M83           ; set extruder to relative
+      G1 E{e} F2100
+    {% else %}
+      {action_respond_info("Extruder not hot enough")}
+    {% endif %}
+    RESUME_BASE {get_params}
+
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+    M83                            ; set extruder to relative
+    G1 E50.0 F300                  ; load
+    G1 E20.0 F300                  ; load
+    G1 E30.0 F150                  ; prime nozzle with filament
+    M82                            ; set extruder to absolute
+    G92 E0.0                       ; reset extruder
+
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+    M83                            ; set extruder to relative
+    G1 E10.0 F300                  ; extrude a little to soften tip
+    G1 E-50.0 F600                 ; retract all the way
+    G1 E-40.0 F600                 ; retract all the way
+    M82                            ; set extruder to absolute
+    G92 E0.0                       ; reset extruder
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [probe]
+#*# z_offset = 2.799
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	0.460625, 0.301250, 0.312500
+#*# 	0.133750, 0.096250, 0.270625
+#*# 	-0.093750, -0.020625, 0.245000
+#*# tension = 0.2
+#*# min_x = 25.0
+#*# algo = lagrange
+#*# y_count = 3
+#*# mesh_y_pps = 2
+#*# min_y = 25.0
+#*# x_count = 3
+#*# max_y = 180.0
+#*# mesh_x_pps = 2
+#*# max_x = 180.0
