--- a/printer.cfg
+++ b/printer.cfg
@@ -45,7 +45,7 @@ x_offset: 0.0
 y_offset: 25.0
 #z_offset: 0
 speed: 2.0
-samples: 4
+samples: 1
 #   Number of times to probe a point
 sample_retract_dist: 6.0
 #   How far to retract (in mm) from the probe point for multi-probe samples
@@ -74,6 +74,8 @@ pid_kd = 139.869
 
 min_temp: 0
 max_temp: 260
+#SET_FILAMENT_SENSOR SENSOR=E0_sensor ENABLE=[0|1]
+#QUERY_FILAMENT_SENSOR SENSOR=E0_sensor
 
 [extruder1]
 step_pin: P0.1
@@ -313,6 +315,15 @@ click_pin: ^!EXP1_2
 
 [output_pin beeper]
 pin: EXP1_1
+#pwm: True
+#   A piezo beeper needs a PWM signal, a DC buzzer doesn't.
+#value: 0
+#   Silent at power on, set to 1 if active low.
+#shutdown_value: 0
+#   Disable at emergency shutdown (no PWM would be available anyway).
+#cycle_time: 0.001
+#   Default PWM frequency : 0.001 = 1ms will give a tone of 1kHz
+#   Although not pitch perfect.
 
 #FOR Ender3
 #[display]
@@ -412,6 +423,43 @@ gcode:
     M82                            ; set extruder to absolute
     G92 E0.0                       ; reset extruder
 
+[gcode_macro START_PRINT]
+gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+    # Start bed heating
+    M140 S{BED_TEMP}
+    # Use absolute coordinates
+    G90
+    # Reset the G-Code Z offset (adjust Z offset if needed)
+    #SET_GCODE_OFFSET Z=0.0
+    # Home the printer
+    G28
+    # Move the nozzle near the bed
+    G1 Z5 F3000
+    # Move the nozzle very close to the bed
+    G1 Z0.15 F300
+    # Wait for bed to reach temperature
+    M190 S{BED_TEMP}
+    # Set and wait for nozzle to reach temperature
+    M109 S{EXTRUDER_TEMP}
+
+[gcode_macro END_PRINT]
+gcode:
+    # Turn off bed, extruder, and fan
+    M140 S0
+    M104 S0
+    M106 S0
+    # Move nozzle away from print while retracting
+    G91
+    G1 X-2 Y-2 E-3 F300
+    # Raise nozzle by 10mm
+    G1 Z10 F3000
+    G90
+    # Disable steppers
+    M84
+    
+    
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
