--- a/printer.cfg
+++ b/printer.cfg
@@ -56,8 +56,7 @@ dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 32
 rotation_distance: 6.1
-
-max_extrude_only_distance: 100
+max_extrude_only_distance: 100.0 #add this line to your extruder section
 max_extrude_only_velocity: 50
 max_extrude_only_accel: 3000
 instantaneous_corner_velocity: 1.500
@@ -81,8 +80,8 @@ max_temp: 260
 step_pin: P0.1
 dir_pin: P0.0
 enable_pin: !P0.10
-microsteps: 16
-rotation_distance: 33.500
+microsteps: 32
+rotation_distance: 6.1
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 shared_heater: extruder
@@ -228,10 +227,6 @@ pause_delay: 0.5
 
 [filament_switch_sensor E0_sensor]
 
-#QUERY_FILAMENT_SENSOR SENSOR= my_sensor
-
-#SET_FILAMENT_SENSOR SENSOR= my_sensor ENABLE=[1]
-
 #detection_length: 7.0
 #   The minimum length of filament pulled through the sensor to trigger
 #   a state change on the switch_pin
@@ -241,16 +236,15 @@ pause_delay: 0.5
 #   This parameter must be provided.
 switch_pin: !P1.24
 
-pause_on_runout: True
+pause_on_runout: True #pause handled by macro
 
 runout_gcode:
+    M600 #calls a macro with the name M600 (so it can be called by slicers too)
     PARK_MACRO
     M117 Out of Filament
-
 insert_gcode:
     M117 Resuming
-    RESUME_MACRO
-    
+    RESUME_MACRO    
 event_delay: 3.0
 
 pause_delay: 0.5
@@ -298,32 +292,34 @@ aliases:
 
 [display]
 lcd_type: hd44780
-hd44780_protocol_init: True
+#hd44780_protocol_init: True
 line_length: 20
 #   Set the number of characters per line for an hd44780 type lcd.
 #   Possible values are 20 (default) and 16. The number of lines is
 #   fixed to 4.
-rs_pin: EXP1_4
-e_pin: EXP1_3
-d4_pin: EXP1_5
-d5_pin: EXP1_6
-d6_pin: EXP1_7
-d7_pin: EXP1_8
-encoder_pins: ^EXP2_3, ^EXP2_5
-click_pin: ^!EXP1_2
-#kill_pin: ^!EXP2_8
+
+rs_pin: EXP1_4 #P0.16
+e_pin: EXP1_3  #P0.18
+d4_pin: EXP1_5 #P0.15
+d5_pin: EXP1_6 #P0.17
+d6_pin: EXP1_7 #P1.0
+d7_pin: EXP1_8 #P1.22
+encoder_pins: ^EXP2_3, ^EXP2_5 #P3.25, P3.26
+click_pin: ^!EXP1_2 #P1.30
+#kill_pin: ^!EXP2_8 #<RST>
 
 [output_pin beeper]
-pin: EXP1_1
+
+pin: EXP1_1 #P1.31
 #pwm: True
 #   A piezo beeper needs a PWM signal, a DC buzzer doesn't.
-#value: 0
+value: 0
 #   Silent at power on, set to 1 if active low.
-#shutdown_value: 0
+shutdown_value: 0
 #   Disable at emergency shutdown (no PWM would be available anyway).
-#cycle_time: 0.001
-#   Default PWM frequency : 0.001 = 1ms will give a tone of 1kHz
+##   Default PWM frequency : 0.001 = 1ms will give a tone of 1kHz
 #   Although not pitch perfect.
+#scale: 1000
 
 #FOR Ender3
 #[display]
@@ -333,6 +329,9 @@ pin: EXP1_1
 #sid_pin: PC1
 #encoder_pins: ^PD2, ^PD3
 #click_pin: ^!PC0
+
+[pause_resume]
+recover_velocity: 50 #allows pause resume functionality.
 
 [bed_mesh]
 speed: 100
@@ -344,91 +343,12 @@ probe_count: 3, 3
 # 	Macros
 #####################################################################
 
-
-[gcode_macro PAUSE]
-description: Pause the actual running print
-rename_existing: PAUSE_BASE
-gcode:
-    ##### set defaults #####
-    {% set x = params.X|default(60) %}         #edit to your park position
-    {% set y = params.Y|default(10) %}        #edit to your park position
-    {% set z = params.Z|default(5)|float %}    #edit to your park position
-    {% set e = params.E|default(0) %}        #edit to your retract length
-    ##### calculate save lift position #####
-    {% set max_z = printer.toolhead.axis_maximum.z|float %}
-    {% set act_z = printer.toolhead.position.z|float %}
-    {% set lift_z = z|abs %}
-    {% if act_z < (max_z - lift_z) %}
-        {% set z_safe = lift_z %}
-    {% else %}
-        {% set z_safe = max_z - act_z %}
-    {% endif %}
-    ##### end of definitions #####
-    SAVE_GCODE_STATE NAME=VPAUSE
-    PAUSE_BASE
-    G91
-    {% if printer.extruder.can_extrude|lower == 'true' %}
-      M83                            ; set extruder to relative
-      G1 E-{e} F2100
-    {% else %}
-      {action_respond_info("Extruder not hot enough to retract")}
-    {% endif %}
-    {% if "xyz" in printer.toolhead.homed_axes %}
-      G1 Z{z_safe}
-      G90
-      G1 X{x} Y{y} F6000
-    {% else %}
-      {action_respond_info("Printer not homed")}
-    {% endif %}
-
-[gcode_macro RESUME]
-description: Resume the actual running print
-rename_existing: RESUME_BASE
-gcode:
-    ##### set defaults #####
-    {% set e = params.E|default(0) %} #edit to your retract length
-    #### get VELOCITY parameter if specified ####
-    {% if 'VELOCITY' in params|upper %}
-      {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
-    {%else %}
-      {% set get_params = "" %}
-    {% endif %}
-    ##### end of definitions #####
-    RESTORE_GCODE_STATE NAME=VPAUSE MOVE=1 MOVE_SPEED=50
-    G91
-    {% if printer.extruder.can_extrude|lower == 'true' %}
-      M83           ; set extruder to relative
-      G1 E{e} F2100
-    {% else %}
-      {action_respond_info("Extruder not hot enough")}
-    {% endif %}
-    RESUME_BASE {get_params}
-
-
-[gcode_macro LOAD_FILAMENT]
-gcode:
-    M83                            ; set extruder to relative
-    G1 E50.0 F300                  ; load
-    G1 E20.0 F300                  ; load
-    G1 E30.0 F150                  ; prime nozzle with filament
-    M82                            ; set extruder to absolute
-    G92 E0.0                       ; reset extruder
-
-[gcode_macro UNLOAD_FILAMENT]
-gcode:
-    M83                            ; set extruder to relative
-    G1 E10.0 F300                  ; extrude a little to soften tip
-    G1 E-50.0 F600                 ; retract all the way
-    G1 E-40.0 F600                 ; retract all the way
-    M82                            ; set extruder to absolute
-    G92 E0.0                       ; reset extruder
-
 [gcode_macro START_PRINT]
 gcode:
-    {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
-    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+    #{% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+    #{% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
     # Start bed heating
-    M140 S{BED_TEMP}
+    #M140 S{BED_TEMP}
     # Use absolute coordinates
     G90
     # Reset the G-Code Z offset (adjust Z offset if needed)
@@ -440,9 +360,9 @@ gcode:
     # Move the nozzle very close to the bed
     G1 Z0.15 F300
     # Wait for bed to reach temperature
-    M190 S{BED_TEMP}
+    #M190 S{BED_TEMP}
     # Set and wait for nozzle to reach temperature
-    M109 S{EXTRUDER_TEMP}
+    #M109 S{EXTRUDER_TEMP}
 
 [gcode_macro END_PRINT]
 gcode:
@@ -459,19 +379,83 @@ gcode:
     # Disable steppers
     M84
     
+[gcode_macro PARK_MACRO]
+#default_parameter_X: 0
+#default_parameter_Y: 0
+#default_parameter_Z: 30
+gcode:
+  M117 PARKING..
+  G91
+  G1 E-3.14 F1500
+#  G1 Z{Z}
+  G1 Z30
+  G90
+  G1 X0 Y0 F3000
+
+[gcode_macro UNLOAD]
+gcode:
+  G91
+  G1 E5.0 F1200
+  G1 E3.0 F1600
+  G1 E-13.14 F3000
+  G1 E-50 F3000 #This is a partial unload for the E5, but you need to adjust the default setting for max extrusion from 50
+  G90
+  
+[gcode_macro M600]
+gcode:
+  PAUSE_MACRO
+  UNLOAD
+  
+
+[gcode_macro PAUSE_MACRO]
+gcode:
+  PAUSE
+  PARK_MACRO
+  SET_IDLE_TIMEOUT TIMEOUT=7200
+
+[gcode_macro PURGE]
+gcode:
+  M117 PURGING..
+  G91
+  G1 E45.0 F250
+  G90
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+  M117  LOADING...
+  G91
+  G1 E25.0 F1000
+  G1 E100 F2500
+  G4 P900
+  G1 E45.0 F250
+  G90
+
+[gcode_macro RESUME_MACRO]
+gcode:
+  M117  RESUMING...
+  RESUME
+
+
+[gcode_macro T0]
+gcode:
+    ACTIVATE_EXTRUDER EXTRUDER=extruder
+
+[gcode_macro T1]
+gcode:
+    ACTIVATE_EXTRUDER EXTRUDER=extruder1
     
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = 2.799
+#*# z_offset = 1.600
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.460625, 0.301250, 0.312500
-#*# 	0.133750, 0.096250, 0.270625
-#*# 	-0.093750, -0.020625, 0.245000
+#*# 	-0.915000, -1.177500, -1.282500
+#*# 	-0.242500, -0.262500, -0.117500
+#*# 	0.505000, 0.707500, 1.085000
 #*# tension = 0.2
 #*# min_x = 25.0
 #*# algo = lagrange
