--- a/printer.cfg
+++ b/printer.cfg
@@ -56,9 +56,9 @@ dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 32
 rotation_distance: 6.1
-max_extrude_only_distance: 100.0 #add this line to your extruder section
+#max_extrude_only_distance: 100.0 #add this line to your extruder section
 max_extrude_only_velocity: 50
-max_extrude_only_accel: 3000
+max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
 
 nozzle_diameter: 0.400
@@ -82,6 +82,9 @@ dir_pin: P0.0
 enable_pin: !P0.10
 microsteps: 32
 rotation_distance: 6.1
+max_extrude_only_velocity: 50
+max_extrude_only_accel: 2500
+instantaneous_corner_velocity: 1.500
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 shared_heater: extruder
@@ -198,7 +201,7 @@ stealthchop_threshold: 999999
 
 [filament_switch_sensor E1_sensor]
 
-#QUERY_FILAMENT_SENSOR SENSOR= my_sensor
+#QUERY_FILAMENT_SENSOR SENSOR= E1_sensor
 
 #SET_FILAMENT_SENSOR SENSOR= my_sensor ENABLE=[1]
 
@@ -214,10 +217,13 @@ switch_pin: !P1.26
 pause_on_runout: True
 
 runout_gcode:
+    M600 #calls a macro with the name M600 (so it can be called by slicers too)
     PARK_MACRO
     M117 Out of Filament
+    M300
 
 insert_gcode:
+    PURGE
     M117 Resuming
     RESUME_MACRO
     
@@ -243,6 +249,8 @@ runout_gcode:
     PARK_MACRO
     M117 Out of Filament
 insert_gcode:
+    LOAD_FILAMENT
+    PURGE
     M117 Resuming
     RESUME_MACRO    
 event_delay: 3.0
@@ -371,12 +379,14 @@ gcode:
     M104 S0
     M106 S0
     # Move nozzle away from print while retracting
-    G91
-    G1 X-2 Y-2 E-3 F300
-    # Raise nozzle by 10mm
-    G1 Z10 F3000
-    G90
-    # Disable steppers
+    G91;Relative positioning
+    G1 E-40 Z2 F1000 ;Retract and raise Z
+    G1 X5 Y5 F3000 ;Wipe out
+    M300
+    G1 Z5 ;Raise Z more
+    G90;
+    G1 X180 Y180;
+    M300
     M84
     
 [gcode_macro PARK_MACRO]
@@ -388,7 +398,7 @@ gcode:
   G91
   G1 E-3.14 F1500
 #  G1 Z{Z}
-  G1 Z30
+  G1 Z15
   G90
   G1 X0 Y0 F3000
 
@@ -397,8 +407,8 @@ gcode:
   G91
   G1 E5.0 F1200
   G1 E3.0 F1600
-  G1 E-13.14 F3000
-  G1 E-50 F3000 #This is a partial unload for the E5, but you need to adjust the default setting for max extrusion from 50
+  G1 E-13.14 F2000
+  G1 E-50 F2000 #This is a partial unload for the E5, but you need to adjust the default setting for max extrusion from 50
   G90
   
 [gcode_macro M600]
@@ -424,8 +434,8 @@ gcode:
 gcode:
   M117  LOADING...
   G91
-  G1 E25.0 F1000
-  G1 E100 F2500
+  G1 E25.0 F500
+  #G1 E100 F250
   G4 P900
   G1 E45.0 F250
   G90
@@ -434,8 +444,21 @@ gcode:
 gcode:
   M117  RESUMING...
   RESUME
-
-
+  
+[gcode_macro M300]
+gcode:  SET_PIN PIN=beeper VALUE=1
+        G4 P200
+        SET_PIN PIN=beeper VALUE=0
+        G4 P100
+        SET_PIN PIN=beeper VALUE=1
+        G4 P200
+        SET_PIN PIN=beeper VALUE=0
+        G4 P100
+        SET_PIN PIN=beeper VALUE=1
+        G4 P200
+        SET_PIN PIN=beeper VALUE=0
+        G4 P100
+        
 [gcode_macro T0]
 gcode:
     ACTIVATE_EXTRUDER EXTRUDER=extruder
@@ -443,19 +466,19 @@ gcode:
 [gcode_macro T1]
 gcode:
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
-    
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = 1.600
+#*# z_offset = 1.3
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.915000, -1.177500, -1.282500
-#*# 	-0.242500, -0.262500, -0.117500
-#*# 	0.505000, 0.707500, 1.085000
+#*# 	  0.165000, -0.387500, -0.770000
+#*# 	  0.212500, -0.102500, -0.235000
+#*# 	  0.355000, 0.277500, 0.367500
 #*# tension = 0.2
 #*# min_x = 25.0
 #*# algo = lagrange
