--- a/printer.cfg
+++ b/printer.cfg
@@ -43,7 +43,7 @@ position_min = -5
 pin: ^P1.25
 x_offset: 0.0
 y_offset: 25.0
-#z_offset: 0
+#z_offset: 1.25
 speed: 2.0
 samples: 1
 #   Number of times to probe a point
@@ -55,11 +55,20 @@ step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 32
-rotation_distance: 6.1
+rotation_distance: 6.0
+#max_extrude_cross_section:
+#   Maximum area (in mm^2) of an extrusion cross section (eg,
+#   extrusion width multiplied by layer height). This setting prevents
+#   excessive amounts of extrusion during relatively small XY moves.
+#   If a move requests an extrusion rate that would exceed this value
+#   it will cause an error to be returned. The default is: 4.0 *
+#   nozzle_diameter^2
 #max_extrude_only_distance: 100.0 #add this line to your extruder section
 max_extrude_only_velocity: 50
 max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
+pressure_advance = 0.285
+#pressure_advance = <start> + <measured_height> * <factor>
 
 nozzle_diameter: 0.400
 filament_diameter: 1.750
@@ -77,11 +86,11 @@ max_temp: 260
 #QUERY_FILAMENT_SENSOR SENSOR=E0_sensor
 
 [extruder1]
-step_pin: P0.1
-dir_pin: P0.0
+step_pin: P1.9
+dir_pin: P1.14
 enable_pin: !P0.10
 microsteps: 32
-rotation_distance: 6.1
+rotation_distance: 6.0
 max_extrude_only_velocity: 50
 max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
@@ -111,6 +120,10 @@ pin: P2.4
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_1960FF13A59869AFAF8D3F5EC62000F5-if00
 
+[force_move]
+#enable_force_move: True
+#   Set to true to enable FORCE_MOVE and SET_KINEMATIC_POSITION
+#   extended G-Code commands. The default is false.
 
 [printer]
 kinematics: corexy
@@ -217,16 +230,17 @@ switch_pin: !P1.26
 pause_on_runout: True
 
 runout_gcode:
+    M301
     M600 #calls a macro with the name M600 (so it can be called by slicers too)
     PARK_MACRO
     M117 Out of Filament
     M300
-
 insert_gcode:
+    #T0
+    LOAD_FILAMENT
     PURGE
     M117 Resuming
-    RESUME_MACRO
-    
+    RESUME_MACRO    
 event_delay: 3.0
 
 pause_delay: 0.5
@@ -245,10 +259,12 @@ switch_pin: !P1.24
 pause_on_runout: True #pause handled by macro
 
 runout_gcode:
+    M301
     M600 #calls a macro with the name M600 (so it can be called by slicers too)
     PARK_MACRO
     M117 Out of Filament
 insert_gcode:
+    #T1
     LOAD_FILAMENT
     PURGE
     M117 Resuming
@@ -265,7 +281,7 @@ gcode: PAUSE Y=10   ; everything needed is defined there
 home_xy_position: 100,100
 #   A X, Y coordinate (e.g. 100, 100) where the Z homing should be
 #   performed. This parameter must be provided.
-speed: 50.0
+speed: 40
 #   Speed at which the toolhead is moved to the safe Z home
 #   coordinate. The default is 50 mm/s
 z_hop: 5
@@ -342,8 +358,8 @@ shutdown_value: 0
 recover_velocity: 50 #allows pause resume functionality.
 
 [bed_mesh]
-speed: 100
-horizontal_move_z: 5
+speed: 150
+horizontal_move_z: 2
 mesh_min: 25, 25
 mesh_max: 180, 180
 probe_count: 3, 3
@@ -353,20 +369,29 @@ probe_count: 3, 3
 
 [gcode_macro START_PRINT]
 gcode:
+    M302
+    G90;
+    G28;
+    BED_MESH_PROFILE LOAD=default
+    G1 X0 Y0 F2000
     #{% set BED_TEMP = params.BED_TEMP|default(60)|float %}
     #{% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
     # Start bed heating
+    #M140 S60
     #M140 S{BED_TEMP}
     # Use absolute coordinates
-    G90
     # Reset the G-Code Z offset (adjust Z offset if needed)
     #SET_GCODE_OFFSET Z=0.0
     # Home the printer
-    G28
     # Move the nozzle near the bed
-    G1 Z5 F3000
     # Move the nozzle very close to the bed
-    G1 Z0.15 F300
+    G92 E0 ;Reset Extruder
+    G1 Z2.0 F3000 ;Move Z Axis up
+    G1 X10.1 Y10 Z0.28 F5000.0 ;Move to start position
+    G1 X10.1 Y120.0 F1500.0 E25 ;Draw the first line
+    G1 X10.4 Y120.0 F5000.0 ;Move to side a little
+    G1 X10.4 Y20 F1500.0 E45 ;Draw the second line
+    #G92 E0 ;Reset Extruder
     # Wait for bed to reach temperature
     #M190 S{BED_TEMP}
     # Set and wait for nozzle to reach temperature
@@ -380,7 +405,8 @@ gcode:
     M106 S0
     # Move nozzle away from print while retracting
     G91;Relative positioning
-    G1 E-40 Z2 F1000 ;Retract and raise Z
+    G1 E-50 Z2 F1000 ;Retract and raise Z
+    #G1 E-50 F1000
     G1 X5 Y5 F3000 ;Wipe out
     M300
     G1 Z5 ;Raise Z more
@@ -408,7 +434,8 @@ gcode:
   G1 E5.0 F1200
   G1 E3.0 F1600
   G1 E-13.14 F2000
-  G1 E-50 F2000 #This is a partial unload for the E5, but you need to adjust the default setting for max extrusion from 50
+  G1 E-30 F2000 #This is a partial unload for the E5, but you need to adjust the default setting for max extrusion from 50
+  G1 E-50 F2000
   G90
   
 [gcode_macro M600]
@@ -427,7 +454,7 @@ gcode:
 gcode:
   M117 PURGING..
   G91
-  G1 E45.0 F250
+  G1 E35.0 F250
   G90
 
 [gcode_macro LOAD_FILAMENT]
@@ -437,7 +464,8 @@ gcode:
   G1 E25.0 F500
   #G1 E100 F250
   G4 P900
-  G1 E45.0 F250
+  G1 E30.0 F250
+  G1 E50.0 F250
   G90
 
 [gcode_macro RESUME_MACRO]
@@ -459,6 +487,22 @@ gcode:  SET_PIN PIN=beeper VALUE=1
         SET_PIN PIN=beeper VALUE=0
         G4 P100
         
+[gcode_macro M301]
+gcode:  SET_PIN PIN=beeper VALUE=1
+        G4 P500
+        SET_PIN PIN=beeper VALUE=0
+        G4 P50
+        SET_PIN PIN=beeper VALUE=1
+        G4 P500
+        SET_PIN PIN=beeper VALUE=0
+        G4 P50
+
+[gcode_macro M302]
+gcode:  SET_PIN PIN=beeper VALUE=1
+        G4 P200
+        SET_PIN PIN=beeper VALUE=0
+        G4 P100
+        
 [gcode_macro T0]
 gcode:
     ACTIVATE_EXTRUDER EXTRUDER=extruder
@@ -470,15 +514,12 @@ gcode:
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
-#*# [probe]
-#*# z_offset = 1.3
-#*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.165000, -0.387500, -0.770000
-#*# 	  0.212500, -0.102500, -0.235000
-#*# 	  0.355000, 0.277500, 0.367500
+#*# 	  0.505000, 0.042500, -0.320000
+#*# 	  0.340000, -0.000000, -0.037500
+#*# 	  0.202500, 0.005000, -0.030000
 #*# tension = 0.2
 #*# min_x = 25.0
 #*# algo = lagrange
@@ -489,3 +530,6 @@ gcode:
 #*# max_y = 180.0
 #*# mesh_x_pps = 2
 #*# max_x = 180.0
+#*#
+#*# [probe]
+#*# z_offset = 0.100
