--- a/printer.cfg
+++ b/printer.cfg
@@ -72,7 +72,7 @@ max_extrude_only_velocity: 50
 max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
 max_extrude_cross_section: 50
-#pressure_advance = 0.285
+pressure_advance = 0.44
 #pressure_advance = <start> + <measured_height> * <factor>
 #SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY=1 ACCEL=500
 
@@ -109,7 +109,7 @@ instantaneous_corner_velocity: 1.500
 max_extrude_cross_section: 50
 max_extrude_only_distance: 500.0
 
-#pressure_advance = 0.285
+pressure_advance = 0.44
 #pressure_advance = <start> + <measured_height> * <factor>
 
 nozzle_diameter: 0.400
@@ -292,9 +292,9 @@ event_delay: 3.0
 
 pause_delay: 0.5
 
-[gcode_macro M600]
-description: Filament change
-gcode: PAUSE Y=10   ; everything needed is defined there
+;[gcode_macro M600]
+;description: Filament change
+;gcode: PAUSE Y=10   ; everything needed is defined there
 
 [safe_z_home]
 home_xy_position: 100,100
@@ -406,10 +406,10 @@ gcode:
     # Move the nozzle very close to the bed
     G92 E0 ;Reset Extruder
     G1 E50 Z2 F1000;Move Z Axis up
-    G1 X10.1 Y10 Z0.28 F5000.0 ;Move to start position
-    G1 X10.1 Y120.0 F1500.0 E50 ;Draw the first line
+    G1 X10.1 Y10 Z0.28 F2000.0 ;Move to start position
+    G1 X10.1 Y120.0 F1500.0 E100 ;Draw the first line
     G1 X10.4 Y120.0 F5000.0 ;Move to side a little
-    G1 X10.4 Y20 F1500.0 E70 ;Draw the second line
+    G1 X10.4 Y20 F1500.0 E120 ;Draw the second line
     #G92 E0 ;Reset Extruder
     # Wait for bed to reach temperature
     #M190 S{BED_TEMP}
@@ -462,7 +462,7 @@ gcode:
 gcode:
   PAUSE_MACRO
   UNLOAD
-  
+
 [gcode_macro PAUSE_MACRO]
 gcode:
   PAUSE
@@ -473,7 +473,7 @@ gcode:
 gcode:
   M117 PURGING..
   G91
-  G1 E35.0 F250
+  G1 E20.0 F250
   G90
 
 [gcode_macro LOAD_FILAMENT]
@@ -536,28 +536,23 @@ gcode:  SET_PIN PIN=beeper VALUE=1
         G4 P200
         SET_PIN PIN=beeper VALUE=0
         G4 P100
-        
+
+
 [gcode_macro T0]
 gcode:
-    #ACTIVATE_EXTRUDER EXTRUDER=extruder1
-    #PAUSE
-    #PARK_MACRO
-    #UNLOAD
+    M104 S200
     ACTIVATE_EXTRUDER EXTRUDER=extruder
-    #LOAD_FILAMENT
-    #PURGE
-    #RESUME_MACRO  
+    LOAD_FILAMENT
+    PURGE
+    RESUME_MACRO  
 
 [gcode_macro T1]
 gcode:
-    #ACTIVATE_EXTRUDER EXTRUDER=extruder0
-    #PAUSE
-    #PARK_MACRO
-    #UNLOAD
+    M104 S200
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
-    #LOAD_FILAMENT
-    #PURGE
-    #RESUME_MACRO
+    LOAD_FILAMENT
+    PURGE
+    RESUME_MACRO
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -580,4 +575,4 @@ gcode:
 #*# max_x = 180.0
 #*#
 #*# [probe]
-#*# z_offset = 0.42
+#*# z_offset = 0.413
