--- a/printer.cfg
+++ b/printer.cfg
@@ -393,11 +393,10 @@ gcode:
     G28;
     BED_MESH_PROFILE LOAD=default
     G1 X0 Y0 F2000
-    #{% set BED_TEMP = params.BED_TEMP|default(60)|float %}
-    #{% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+    {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
     # Start bed heating
-    #M140 S60
-    #M140 S{BED_TEMP}
+    M140 S{BED_TEMP}
     # Use absolute coordinates
     # Reset the G-Code Z offset (adjust Z offset if needed)
     #SET_GCODE_OFFSET Z=0.0
@@ -405,16 +404,16 @@ gcode:
     # Move the nozzle near the bed
     # Move the nozzle very close to the bed
     G92 E0 ;Reset Extruder
-    G1 E50 Z2 F1000;Move Z Axis up
-    G1 X10.1 Y10 Z0.28 F2000.0 ;Move to start position
-    G1 X10.1 Y120.0 F1500.0 E100 ;Draw the first line
-    G1 X10.4 Y120.0 F5000.0 ;Move to side a little
-    G1 X10.4 Y20 F1500.0 E120 ;Draw the second line
+    ;G1 E50 Z2 F1000;Move Z Axis up
+    ;G1 X10.1 Y10 Z0.28 F2000.0 ;Move to start position
+    ;G1 X10.1 Y120.0 F1500.0 E100 ;Draw the first line
+    ;G1 X10.4 Y120.0 F5000.0 ;Move to side a little
+   ; G1 X10.4 Y20 F1500.0 E120 ;Draw the second line
     #G92 E0 ;Reset Extruder
     # Wait for bed to reach temperature
     #M190 S{BED_TEMP}
     # Set and wait for nozzle to reach temperature
-    #M109 S{EXTRUDER_TEMP}
+    M104 S{EXTRUDER_TEMP}
 
 [gcode_macro END_PRINT]
 gcode:
@@ -434,19 +433,18 @@ gcode:
     G1 X180 Y180;
     M300
     M84
-    
+
 [gcode_macro PARK_MACRO]
-#default_parameter_X: 0
-#default_parameter_Y: 0
-#default_parameter_Z: 30
 gcode:
-  M117 PARKING..
-  G91
-  G1 E-3.14 F1500
-#  G1 Z{Z}
-  G1 Z15
-  G90
-  G1 X0 Y0 F3000
+    {% set X = params.X|default(0)|float %}
+    {% set Y = params.Y|default(200)|float %}
+    {% set Z = params.Z|default(30)|float %}
+    M117 PARKING...
+    G91
+    G1 E-3.14 F1500
+    G1 Z{Z}
+    G90
+    G1 X{X} Y{Y} F3000
 
 [gcode_macro UNLOAD]
 gcode:
@@ -463,6 +461,7 @@ gcode:
   PAUSE_MACRO
   UNLOAD
 
+  
 [gcode_macro PAUSE_MACRO]
 gcode:
   PAUSE
@@ -473,18 +472,39 @@ gcode:
 gcode:
   M117 PURGING..
   G91
-  G1 E20.0 F250
+  G1 E25.0 F500
+  G1 F500 X12 Y0 E1.70772
+  G1 X-12 Y0 E2.86736
+  G1 X15.2 Y0 E3.18666
+  G1 X-15.2 Y0 E4.50596
+  G0 X65 Y0
   G90
 
+
+[gcode_macro MORE_PURGE]
+gcode:
+  M117 PURGING..
+  G91
+  G1 E80.0 F300
+  G1 F300 X12 Y0 E1.70772
+  G1 X-12 Y0 E2.86736
+  G1 X15.2 Y0 E3.18666
+  G1 X-15.2 Y0 E4.50596
+  G0 X65 Y0
+  G90
+  
+  
 [gcode_macro LOAD_FILAMENT]
 gcode:
   M117  LOADING...
   G91
-  G1 E5.0 F500
+  
+  G1 E5.0 F800
   #G1 E100 F250
   G4 P900
-  G1 E50.0 F250
-  G1 E50.0 F250
+  G1 E50.0 F800
+  G1 E50.0 F800
+  
   G90
 
 [gcode_macro RESUME_MACRO]
@@ -540,19 +560,26 @@ gcode:  SET_PIN PIN=beeper VALUE=1
 
 [gcode_macro T0]
 gcode:
-    M104 S200
+    ;PARK_MACRO
+    ;UNLOAD
     ACTIVATE_EXTRUDER EXTRUDER=extruder
+    #M104 S200
     LOAD_FILAMENT
     PURGE
-    RESUME_MACRO  
+    ;M602
+    ;RESUME_MACRO 
+
 
 [gcode_macro T1]
 gcode:
-    M104 S200
+    ;PARK_MACRO
+    ;UNLOAD
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
+    M104 S220 #MAKE LOW TEMP. MATERIAL PURGE MORE SMOOTH
     LOAD_FILAMENT
-    PURGE
-    RESUME_MACRO
+    MORE_PURGE
+    ;M602
+    ;RESUME_MACRO
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
