--- a/printer.cfg
+++ b/printer.cfg
@@ -72,7 +72,7 @@ max_extrude_only_velocity: 50
 max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
 max_extrude_cross_section: 50
-pressure_advance = 0.44
+pressure_advance = 0.24 #0.44
 #pressure_advance = <start> + <measured_height> * <factor>
 #SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY=1 ACCEL=500
 
@@ -87,10 +87,10 @@ filament_diameter: 1.750
 heater_pin: P2.7
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.23
-control: pid
-pid_kp = 28.913
-pid_ki = 1.494
-pid_kd = 139.869
+#control: pid
+#pid_kp = 28.913
+#pid_ki = 1.494
+#pid_kd = 139.869
 
 min_temp: 0
 max_temp: 260
@@ -109,7 +109,7 @@ instantaneous_corner_velocity: 1.500
 max_extrude_cross_section: 50
 max_extrude_only_distance: 500.0
 
-pressure_advance = 0.44
+pressure_advance = 0.14
 #pressure_advance = <start> + <measured_height> * <factor>
 
 nozzle_diameter: 0.400
@@ -125,11 +125,11 @@ shared_heater: extruder
 heater_pin: P2.5
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.24
-control: pid
+#control: pid
 # tuned for stock hardware with 50 degree Celsius target
-pid_Kp: 74.460
-pid_Ki: 1.628
-pid_Kd: 851.639
+#pid_Kp: 74.460
+#pid_Ki: 1.628
+#pid_Kd: 851.639
 min_temp: 0
 max_temp: 130
 
@@ -380,7 +380,7 @@ mesh_min: 25, 25
 mesh_max: 180, 180
 probe_count: 3, 3
 #####################################################################
-#   Macros
+# 	Macros
 #####################################################################
 
 [gcode_macro START_PRINT]
@@ -389,11 +389,12 @@ gcode:
     G90;
     G28;
     BED_MESH_PROFILE LOAD=default
-    G1 X0 Y205 F2000
+    G1 X0 Y200 F2000
     {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
     # Start bed heating
-    M140 S{BED_TEMP}
+    ;M140 S{BED_TEMP}
+    M109 S{EXTRUDER_TEMP}
     # Use absolute coordinates
     # Reset the G-Code Z offset (adjust Z offset if needed)
     #SET_GCODE_OFFSET Z=0.0
@@ -401,16 +402,18 @@ gcode:
     # Move the nozzle near the bed
     # Move the nozzle very close to the bed
     G92 E0 ;Reset Extruder
-    ;G1 E50 Z2 F1000;Move Z Axis up
-    ;G1 X10.1 Y10 Z0.28 F2000.0 ;Move to start position
-    ;G1 X10.1 Y120.0 F1500.0 E100 ;Draw the first line
-    ;G1 X10.4 Y120.0 F5000.0 ;Move to side a little
-   ; G1 X10.4 Y20 F1500.0 E120 ;Draw the second line
-    #G92 E0 ;Reset Extruder
+    G1 Z0.3 F1000;Move Z Axis up
+    G1 Y150 E15.0 F1500.0 ; intro line
+    G1 X2.3 F2000
+    G1 Y205 E30 F1200.0 ; intro line
+    G1 X20 E40 F1200.0 ; intro line
+    G1 X0 E50 F1200.0
+    G92 E0 ;Reset Extruder
+    ;G1 F2100 E-1
     # Wait for bed to reach temperature
     #M190 S{BED_TEMP}
     # Set and wait for nozzle to reach temperature
-    M104 S{EXTRUDER_TEMP}
+    ;M104 S{EXTRUDER_TEMP}
 
 [gcode_macro END_PRINT]
 gcode:
@@ -420,14 +423,15 @@ gcode:
     M106 S0
     # Move nozzle away from print while retracting
     G91;Relative positioning
-    G1 E-3.14 F1500
-    G1 E-40 Z2 F1000 ;Retract and raise Z
-    G1 E-50 F1000
+    G1 E18
+    G1 E-40 Z2 F2000 ;Retract and raise Z
+    G1 E-60 F2000
+    G1 E-50 F2000
     ;G0 X5 Y5 F3000 ;Wipe out
-    M300
     G1 Z5 ;Raise Z more
     G90;
     G0 X0 Y0;
+    M300
     M300
     M84
 
@@ -446,13 +450,10 @@ gcode:
 [gcode_macro UNLOAD]
 gcode:
   G91
-  G1 E5.0 F1200
-  G1 E3.0 F1600
-  G1 E-15 F2000
-  G1 E-14 F1500
-  G1 E-4 F1000 ;(-15-14-4=-33), Cooling Tube Position
-  ;G1 E-2 F1600 #This is a partial unload for the E5, but you need to adjust the default setting for max extrusion from 50
-  G1 E-60 F2000
+  G1 E18.0 F1200
+  G1 E-40 F2000
+  G1 E-60 F1500
+  G1 E-50 F2000
   G90
   
 
@@ -472,9 +473,13 @@ gcode:
 gcode:
   M117 PURGING..
   G91
-  G1 E25.0 F500
-  G0 F5000 X40 Y0
+  G1 E35.0 F500
+  G1 E-1 F1800
+  G0 X20 Y0
+  G0 F3000 X20 Y0
   G0 X-32 Y0
+  G0 X35.2 Y0
+  G0 X-35.2 Y0
   G0 X35.2 Y0
   G0 X-35.2 Y0
   G0 X35.2 Y0
@@ -487,9 +492,13 @@ gcode:
 gcode:
   M117 PURGING..
   G91
-  G1 E70.0 F300
-  G0 F5000 X40 Y0
+  G1 E45.0 F300
+  G1 E-1 F1800
+  G0  X20 Y0
+  G0 F3000 X20 Y0
   G0 X-32 Y0
+  G0 X35.2 Y0
+  G0 X-35.2 Y0
   G0 X35.2 Y0
   G0 X-35.2 Y0
   G0 X35.2 Y0
@@ -507,7 +516,8 @@ gcode:
   #G1 E100 F250
   ;G4 P900
   G1 E40.0 F800
-  G1 E50.0 F800
+  G1 E60.0 F800
+  G1 E70.0 F800
   
   G90
 
@@ -567,11 +577,11 @@ gcode:
     ;PARK_MACRO
     ;UNLOAD
     ACTIVATE_EXTRUDER EXTRUDER=extruder
-    M104 S220
+    ;M104 S210
     LOAD_FILAMENT
     MORE_PURGE
-    G1 E-1 F1800
-    M104 S200
+    
+    ;M104 S200
     ;PURGE
     ;M602
     ;RESUME_MACRO 
@@ -582,12 +592,12 @@ gcode:
     ;PARK_MACRO
     ;UNLOAD
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
-    M104 S220
+    ;M104 S210
     ;M104 S220 #MAKE LOW TEMP. MATERIAL PURGE MORE SMOOTH
     LOAD_FILAMENT
     PURGE
     ;MORE_PURGE
-    G1 E-1 F1800
+    
     ;M602
     ;RESUME_MACRO
 
@@ -597,9 +607,9 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*#   0.300000, 0.052500, -0.042500
-#*#   0.157500, -0.007500, -0.005000
-#*#   0.122500, 0.020000, 0.045000
+#*# 	0.430000, 0.230000, 0.192500
+#*# 	0.192500, 0.047500, 0.095000
+#*# 	0.037500, -0.075000, -0.020000
 #*# tension = 0.2
 #*# min_x = 25.0
 #*# algo = lagrange
@@ -612,4 +622,16 @@ gcode:
 #*# max_x = 180.0
 #*#
 #*# [probe]
-#*# z_offset = 2.5
+#*# z_offset = 0.9
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 28.627
+#*# pid_ki = 1.503
+#*# pid_kd = 136.337
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 73.668
+#*# pid_ki = 1.488
+#*# pid_kd = 911.643
