--- a/printer.cfg
+++ b/printer.cfg
@@ -21,7 +21,7 @@ kinematics: corexy
 max_velocity: 300  
 max_accel: 3000         #Max 4000
 max_z_velocity: 15      #Max 15 for 12V TMC Drivers, can increase for 24V
-max_z_accel: 350
+max_z_accel: 200
 square_corner_velocity: 5.0
 
 #####################################################################
@@ -43,15 +43,15 @@ position_min: 0
 #position_max: 250
 
 ##  Uncomment for 300mm build
-position_endstop: 300
-position_max: 300
+position_endstop: 305
+position_max: 305
 
 ##  Uncomment for 350mm build
 #position_endstop: 350
 #position_max: 350
 
 ##--------------------------------------------------------------------
-homing_speed: 25   #Max 100
+homing_speed: 50   #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -61,7 +61,7 @@ homing_positive_dir: true
 
 [tmc5160 stepper_x]
 cs_pin: PC4
-run_current: 0.800
+run_current: 1
 hold_current: 0.500
 stealthchop_threshold: 10000
 spi_software_mosi_pin: PA7
@@ -84,26 +84,33 @@ position_min: 0
 #position_max: 250
 
 ##  Uncomment for 300mm build
-position_endstop: 300
-position_max: 300
+position_endstop: 305
+position_max: 305
 
 ##  Uncomment for 350mm build
 #position_endstop: 350
 #position_max: 350
 
 ##--------------------------------------------------------------------
-homing_speed: 25  #Max 100
+homing_speed: 50  #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
 [tmc5160 stepper_y]
 cs_pin: PD11
-run_current: 0.800
+run_current: 1
 hold_current: 0.500
 stealthchop_threshold: 10000
 spi_software_mosi_pin: PA7
 spi_software_miso_pin: PA6
 spi_software_sclk_pin: PA5
+
+[input_shaper]
+shaper_freq_x: 20 #49.4
+shaper_freq_y: 20 #49.4
+shaper_type: mzv
+
+
 
 
 [stepper_z]
@@ -111,17 +118,17 @@ step_pin: PF11
 dir_pin: PG3
 enable_pin: !PG5
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
-rotation_distance: 4    
+rotation_distance: 2    
 #rotation_distance: 40
 #gear_ratio: 80:16
 microsteps: 32
-endstop_pin: PG10
-#endstop_pin: probe: z_virtual_endstop
+#endstop_pin: !PG10
+endstop_pin: probe: z_virtual_endstop
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: -0.5
+##position_endstop: -0.5
 ##--------------------------------------------------------------------
 
 ## All builds use same Max Z
@@ -145,10 +152,10 @@ stealthchop_threshold: 0
 ##  Connected to MOTOR_3
 [stepper_z1]
 step_pin: PG4
-dir_pin: PC1
+dir_pin: !PC1
 enable_pin: !PA0
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
-rotation_distance: 4  
+rotation_distance: 2  
 microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -163,10 +170,10 @@ stealthchop_threshold: 0
 ##  Connected to MOTOR_4
 [stepper_z2]
 step_pin: PF9
-dir_pin: PF10
+dir_pin: !PF10
 enable_pin: !PG2
 # Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
-rotation_distance: 4
+rotation_distance: 2
 microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -178,10 +185,54 @@ sense_resistor: 0.110
 stealthchop_threshold: 0
 
 
+[extruder_stepper share_stepper]
+;[extruder_stepper my_extra_stepper]
+extruder: extruder
+#   The extruder this stepper is synchronized to. If this is set to an
+#   empty string then the stepper will not be synchronized to an
+#   extruder. This parameter must be provided.
+
+#   See the "stepper" section for the definition of the above
+#   parameters.
+;[extruder]
+step_pin: PC13
+dir_pin: !PF0
+enable_pin: !PF1
+##  Update value below when you perform extruder calibration
+##  If you ask for 100mm of filament, but in reality it is 98mm:
+##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
+##  22.6789511 is a good starting point
+rotation_distance: 22.6789511  #Bondtech 5mm Drive Gears
+##  Update Gear Ratio depending on your Extruder Type
+##  Use 50:10 for Stealthburner/Clockwork 2
+##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
+##  Use 80:20 for M4, M3.1
+gear_ratio: 50:10               
+microsteps: 8
+
+
+
+##  E0 on MOTOR6
+##  Make sure to update below for your relevant driver (2208 or 2209)
+[tmc5160 extruder_stepper share_stepper]
+cs_pin: PE4
+run_current: 0.800
+hold_current: 0.500
+stealthchop_threshold: 10000
+spi_software_mosi_pin: PA7
+spi_software_miso_pin: PA6
+spi_software_sclk_pin: PA5
+#[tmc2209 extruder_stepper share_stepper]
+#uart_pin: PE4
+#interpolate: False
+#run_current: 0.8
+#sense_resistor: 0.110
+#stealthchop_threshold: 0
+
 
 [extruder]
 step_pin: PE2
-dir_pin: PE3
+dir_pin: !PE3
 enable_pin: !PD4
 ##  Update value below when you perform extruder calibration
 ##  If you ask for 100mm of filament, but in reality it is 98mm:
@@ -192,7 +243,7 @@ rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
 ##  Use 50:10 for Stealthburner/Clockwork 2
 ##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##  Use 80:20 for M4, M3.1
-gear_ratio: 50:10               
+gear_ratio: 80:20               
 microsteps: 32
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 #max_extrude_cross_section:
@@ -213,7 +264,7 @@ instantaneous_corner_velocity: 1.500
 max_extrude_cross_section: 50
 
 ##  Try to keep pressure_advance below 1.0
-pressure_advance: 0.25
+pressure_advance: 0.44
 ##  Default is 0.040, leave stock
 #pressure_advance_smooth_time: 0.040
 
@@ -225,20 +276,21 @@ pressure_advance: 0.25
 
 #For printers with a direct drive extruder run the command:
 #TUNING_TOWER COMMAND=SET_PRESSURE_ADVANCE PARAMETER=ADVANCE START=0 FACTOR=.005
-
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: PA2
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: PB11
 
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for NTC 100k 3950 thermistors
 sensor_type: EPCOS 100K B57560G104F
 
 sensor_pin: PF4
-control = pid
-pid_kp = 26.213
-pid_ki = 1.304
-pid_kd = 131.721
+#control = pid
+#pid_kp = 26.213
+#pid_ki = 1.304
+#pid_kd = 131.721
 
 
 min_temp: 10
@@ -247,6 +299,7 @@ max_power: 1.0
 min_extrude_temp: 170
 #SET_FILAMENT_SENSOR SENSOR=E0_sensor ENABLE=[0|1]
 #QUERY_FILAMENT_SENSOR SENSOR=E0_sensor
+
 
 ##  E0 on MOTOR6
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -264,24 +317,20 @@ step_pin: PE6
 dir_pin: !PA14
 enable_pin: !PE0
 microsteps: 32
-rotation_distance: 33.683
+rotation_distance: 7.92
 max_extrude_only_velocity: 70
 max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
 max_extrude_cross_section: 50
 max_extrude_only_distance: 500.0
 
-pressure_advance : 0.14
+pressure_advance : 0.44
 #pressure_advance = <start> + <measured_height> * <factor>
 
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 shared_heater: extruder
 
-#sensor_type: EPCOS 100K B57560G104F
-#heater_pin: P2.6
-#sensor_pin: P0.25
-#...
 [tmc2209 extruder1]
 uart_pin: PD3
 interpolate: False
@@ -293,7 +342,7 @@ stealthchop_threshold: 0
 [heater_bed]
 ##  SSR Pin - HE1
 ##  Thermistor - TB
-heater_pin: PA3
+heater_pin: PA1
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for Keenovo heaters
 sensor_type: EPCOS 100K B57560G104F
@@ -302,10 +351,10 @@ sensor_pin: PF3
 max_power: 0.6
 min_temp: 0
 max_temp: 120
-control: pid
-pid_kp: 58.437
-pid_ki: 2.347
-pid_kd: 363.769
+#control: pid
+#pid_kp: 58.437
+#pid_ki: 2.347
+#pid_kd: 363.769
 
 #####################################################################
 #   Probe
@@ -323,10 +372,10 @@ pid_kd: 363.769
 
 #--------------------------------------------------------------------
 [probe]
-pin: ~!PB7
+pin: ~PG10
 x_offset: 0.0
-y_offset: 25.0
-z_offset: 0
+y_offset: 0.0
+#z_offset: -0.800
 speed: 10.0
 samples: 3
 samples_result: median
@@ -334,13 +383,32 @@ sample_retract_dist: 3.0
 samples_tolerance: 0.006
 samples_tolerance_retries: 3
 
+activate_gcode:
+    {% set PROBE_TEMP = 150 %}
+    {% set MAX_TEMP = PROBE_TEMP + 25 %}
+    {% set ACTUAL_TEMP = printer.extruder.temperature %}
+    {% set TARGET_TEMP = printer.extruder.target %}
+
+    {% if TARGET_TEMP > PROBE_TEMP %}
+        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+        M109 S{ PROBE_TEMP }
+    {% else %}
+        # Temperature target is already low enough, but nozzle may still be too hot.
+        {% if ACTUAL_TEMP > MAX_TEMP %}
+            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+        {% endif %}
+    {% endif %}
+    
+
+
 #####################################################################
 #   Fan Control
 #####################################################################
 
 [fan]
 ##  Print Cooling Fan - FAN0
-pin: PA8
+pin: PD14
 kick_start_time: 0.5
 ##  Depending on your fan, you may need to increase this value
 ##  if your fan will not start. Can change cycle_time (increase)
@@ -349,7 +417,7 @@ off_below: 0.10
 
 [heater_fan hotend_fan]
 ##  Hotend Fan - FAN1
-pin: PE5
+pin: PD15
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
@@ -397,9 +465,10 @@ timeout: 1800
 ##  Update -10,-10 to the XY coordinates of your endstop pin 
 ##  (such as 157,305) after going through Z Endstop Pin
 ##  Location Definition step.
-home_xy_position:-10,-10
+home_xy_position:150,150
 speed:100
-z_hop:10
+z_hop:5
+z_hop_speed = 5
 
 [z_tilt]
 ##  Use Z_TILT_ADJUST to level the bed .
@@ -416,15 +485,32 @@ z_hop:10
 #    125, 195
 #    220, 5
 
-## Uncomment below for 300mm build
+## Uncomment below for 225mm build
+#   A list of X, Y coordinates (one per line; subsequent lines
+#   indented) describing the location of each bed "pivot point". The
+#   "pivot point" is the point where the bed attaches to the given Z
+#   stepper. It is described using nozzle coordinates (the X, Y position
+#   of the nozzle if it could move directly above the point). The
+#   first entry corresponds to stepper_z, the second to stepper_z1,
+#   the third to stepper_z2, etc. This parameter must be provided.
 z_positions:
-   -50, 18
-   150, 348
-   350, 18
+   -50, 18 #z0 FRONT 
+   150, 348 #z1
+   350, 18 #z2
 points:
-   30, 5
-   150, 245
-   270, 5
+   40, 10
+   150, 225
+   260, 10
+   
+## Uncomment below for 300mm build
+#z_positions:
+#   -50, 18
+#   150, 348
+#   350, 18
+#points:
+#   30, 5
+#   150, 245
+#   270, 5
 
 ## Uncomment below for 350mm build
 #z_positions:
@@ -439,91 +525,17 @@ points:
 
 ##--------------------------------------------------------------------
 
-speed: 200
+speed: 150
 horizontal_move_z: 10
-retries: 5
+retries: 3
 retry_tolerance: 0.0075
 
 
 
 [force_move]
-#enable_force_move: True
+enable_force_move: True
 #   Set to true to enable FORCE_MOVE and SET_KINEMATIC_POSITION
 #   extended G-Code commands. The default is false.
-
-########################################
-# TMC2208 configuration
-########################################
-
-#[tmc2209 stepper_y]
-#uart_pin: P1.8
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-#[tmc2209 stepper_z]
-#uart_pin: P1.10
-#run_current: 0.650
-#stealthchop_threshold: 999999
-
-#[tmc2209 extruder]
-#uart_pin: P1.15
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-#[tmc2209 extruder1]
-#uart_pin: P1.17
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-
-########################################
-# TMC2130 configuration
-########################################
-
-#[tmc2130 stepper_x]
-#cs_pin: P1.1
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P4.28
-#spi_software_sclk_pin: P0.4
-##diag1_pin: ^!P1.29
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-#[tmc2130 stepper_y]
-#cs_pin: P1.8
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P4.28
-#spi_software_sclk_pin: P0.4
-##diag1_pin: ^!P1.27
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-#[tmc2130 stepper_z]
-#cs_pin: P1.10
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P4.28
-#spi_software_sclk_pin: P0.4
-##diag1_pin: ^!P1.25
-#run_current: 0.650
-#stealthchop_threshold: 999999
-
-#[tmc2130 extruder]
-#cs_pin: P1.15
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P4.28
-#spi_software_sclk_pin: P0.4
-##diag1_pin: ^!P1.28
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-#[tmc2130 extruder1]
-#cs_pin: P1.17
-#spi_software_miso_pin: P0.5
-#spi_software_mosi_pin: P4.28
-#spi_software_sclk_pin: P0.4
-##diag1_pin: ^!P1.26
-#run_current: 0.800
-#stealthchop_threshold: 999999
 
 [filament_switch_sensor E1_sensor]
 
@@ -703,13 +715,13 @@ recover_velocity: 50 #allows pause resume functionality.
 [bed_mesh]
 speed: 150
 horizontal_move_z: 3
-mesh_min: 25, 25
-mesh_max: 180, 180
+mesh_min: 40, 10
+mesh_max: 260, 225
 probe_count: 3, 3
 
 
 #####################################################################
-#   Macros
+# 	Macros
 #####################################################################
 
 #[gcode_macro G32]
@@ -733,11 +745,14 @@ probe_count: 3, 3
 
 [gcode_macro START_PRINT]
 gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
     M302;
+    M140 S{BED_TEMP}
     G90;
     G28;
-    Z_TILT_ADJUST;
-    G28;
+
+    ;Z_TILT_ADJUST;
+    ;G28;
 
     ##  Uncomment for for your size printer:
     #--------------------------------------------------------------------
@@ -745,15 +760,16 @@ gcode:
     #G0 X125 Y125 Z30 F3600
 
     ##  Uncomment for 300 build
-    G0 X150 Y150 Z30 F3600
+    ;G0 Z10 F1000;
+    ;G0 X150 Y150 F3600
 
     ##  Uncomment for 350mm build
     #G0 X175 Y175 Z30 F3600
     #--------------------------------------------------------------------
 
     #BED_MESH_PROFILE LOAD=default
-    G1 X0 Y200 F2000
-    {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+    G1 X305 Y8 F2000
+
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
     # Start bed heating
     ;M140 S{BED_TEMP}
@@ -766,11 +782,14 @@ gcode:
     # Move the nozzle very close to the bed
     G92 E0 ;Reset Extruder
     G1 Z0.3 F1000;Move Z Axis up
-    G1 Y150 E15.0 F1500.0 ; intro line
-    G1 X2.3 F2000
-    G1 Y205 E30 F1200.0 ; intro line
-    G1 X20 E40 F1200.0 ; intro line
-    G1 X0 E50 F1200.0
+    G1 E15.0 F1500.0
+    ;G1 E30 F1200.0
+    G1 X290 Y18
+    G1 Y68 F2000;
+    G1 Y18;
+    G1 Y68;
+    G1 X305 Y8;
+    ;G1 X300 E50 F1200.0
     G92 E0 ;Reset Extruder
     ;G1 F2100 E-1
     # Wait for bed to reach temperature
@@ -792,21 +811,29 @@ gcode:
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
     G1 E-2.0 F3600                 ; retract filament
+    G1 E-5.0
     
     TURN_OFF_HEATERS
     
     G90                                      ; absolute positioning
-    G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
-    G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
-    M107                                     ; turn off fan
+    ;G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
+    G0 Z{z_safe} F1000  ; move nozzle to remove stringing
+    ;G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
+    G0 Y305 F3600
+    G0 X180
+    G0 X300
     
+    ;G0 X{th.axis_maximum.x} Y8 F3600
+    
+    M107                                     ; turn off fan
+    M300
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
 
 [gcode_macro PARK_MACRO]
 gcode:
-    {% set X = params.X|default(0)|float %}
-    {% set Y = params.Y|default(200)|float %}
+    {% set X = params.X|default(305)|float %}
+    {% set Y = params.Y|default(18)|float %}
     {% set Z = params.Z|default(30)|float %}
     M117 PARKING...
     G91
@@ -843,16 +870,12 @@ gcode:
   G91
   G1 E35.0 F500
   G1 E-1 F1800
-  G0 X20 Y0
-  G0 F3000 X20 Y0
-  G0 X-32 Y0
-  G0 X35.2 Y0
-  G0 X-35.2 Y0
-  G0 X35.2 Y0
-  G0 X-35.2 Y0
-  G0 X35.2 Y0
-  G0 X-35.2 Y0
-  G0 X65 Y0
+  G0 X-15 Y50
+  G0 F3000 Y-50
+  G0 Y50
+  G0 Y-50
+  G0 Y50
+  G0 Y-50
   G90
 
 
@@ -862,16 +885,12 @@ gcode:
   G91
   G1 E45.0 F300
   G1 E-1 F1800
-  G0  X20 Y0
-  G0 F3000 X20 Y0
-  G0 X-32 Y0
-  G0 X35.2 Y0
-  G0 X-35.2 Y0
-  G0 X35.2 Y0
-  G0 X-35.2 Y0
-  G0 X35.2 Y0
-  G0 X-35.2 Y0
-  G0 X65 Y0
+  G0 X-15 Y50
+  G0 F3000 Y-50
+  G0 Y50
+  G0 Y-50
+  G0 Y50
+  G0 Y-50
   G90
   
   
@@ -884,8 +903,8 @@ gcode:
   #G1 E100 F250
   ;G4 P900
   G1 E40.0 F800
-  G1 E60.0 F800
-  G1 E70.0 F800
+  ;G1 E60.0 F800
+  ;G1 E70.0 F800
   
   G90
 
@@ -945,6 +964,8 @@ gcode:
     ;PARK_MACRO
     ;UNLOAD
     ACTIVATE_EXTRUDER EXTRUDER=extruder
+    SYNC_EXTRUDER_MOTION EXTRUDER=share_stepper MOTION_QUEUE=
+    SYNC_EXTRUDER_MOTION EXTRUDER=share_stepper MOTION_QUEUE=extruder
     ;M104 S210
     LOAD_FILAMENT
     MORE_PURGE
@@ -960,6 +981,8 @@ gcode:
     ;PARK_MACRO
     ;UNLOAD
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
+    SYNC_EXTRUDER_MOTION EXTRUDER=share_stepper MOTION_QUEUE=
+    SYNC_EXTRUDER_MOTION EXTRUDER=share_stepper MOTION_QUEUE=extruder1
     ;M104 S210
     ;M104 S220 #MAKE LOW TEMP. MATERIAL PURGE MORE SMOOTH
     LOAD_FILAMENT
@@ -979,3 +1002,37 @@ gcode:
 ##   "AD595"
 ##   "PT100 INA826"
 
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [probe]
+#*# z_offset = -0.450
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.087187, -0.158438, 0.083750
+#*# 	  0.376250, -0.066875, -0.225313
+#*# 	  0.745312, -0.002500, -0.618750
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = lagrange
+#*# y_count = 3
+#*# mesh_y_pps = 2
+#*# min_y = 10.0
+#*# x_count = 3
+#*# max_y = 225.0
+#*# mesh_x_pps = 2
+#*# max_x = 260.0
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 16.326
+#*# pid_ki = 0.479
+#*# pid_kd = 138.973
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 45.764
+#*# pid_ki = 0.697
+#*# pid_kd = 751.670
